Fix image spacing

--- a/frontend/src/assets/stylesheets/spot_detail.css
+++ b/frontend/src/assets/stylesheets/spot_detail.css
@@ -12,20 +12,20 @@
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
-  height: 100%;
+  height: 50%;
   margin-top: 25px;
 }
 
 .spot-index-item-detail-wrapper .spot-index-item-detail-photos .main-photo-wrapper {
   width: 50%;
-  height: 100%;
-  margin-right: 1%;
+  height: 99.5%;
   overflow: hidden;
+  margin-right: 0.2%;
 }
 
 .spot-index-item-detail-wrapper .spot-index-item-detail-photos .main-photo-wrapper img {
-  max-width: 100%;
-  width: auto;
+  width: 100%;
+  height: 100%;
 }
 
 .spot-index-item-detail-wrapper .spot-index-item-detail-photos .main-photo-wrapper img:hover {
@@ -40,19 +40,18 @@
   flex-wrap: wrap;
   justify-content: space-between;
   width: 50%;
-  height: 100%
+  height: 100%;
 }
 
 .spot-index-item-detail-wrapper .spot-index-item-detail-photos .thumbnail-photos-wrapper .image-wrapper {
-  width: 49%;
-  height: 48%;
+  width: 49.82%;
+  height: 49.5%;
   overflow: hidden;
 }
 
 .spot-index-item-detail-wrapper .spot-index-item-detail-photos .thumbnail-photos-wrapper .image-wrapper img {
   width: 100%;
   height: 100%;
-  padding-bottom: 1%;
 }
 
 .spot-index-item-detail-wrapper .spot-index-item-detail-photos .thumbnail-photos-wrapper .image-wrapper img:hover {
